kubernetes/pod-with-annotation.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  labels:
    app: nginx
  annotations:
    fungsi: "fungsi aplikasi ini adalah untuk manage keuangan"
spec:
  containers:
  - name: nginx
    image: nginx:latest
    ports:
    - containerPort: 80
